# Search_engine

./: CMakeLists.txt  README.md
JSON/: answers.json  config.json
headers/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: TestCaseInvertedIndex.cpp  TestCaseSearchServer.cpp  test.cpp
